--- a/.github/workflows/users_tests.yml
+++ b/.github/workflows/users_tests.yml
@@ -13,6 +13,10 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+
+    env:
+      JWT_PRIVATE: ${{ secrets.JWT_PRIVATE }}
+
     steps:
     - uses: actions/checkout@v4
 
