--- a/.github/workflows/users_tests.yml
+++ b/.github/workflows/users_tests.yml
@@ -27,6 +27,9 @@ jobs:
 
     - name: Go to users subdirectory
       run: cd users
+
+    - name: Run ls for debug
+      run: ls
     - name: Build
       run: go build -v ./...
 
