--- a/.github/workflows/users_tests.yml
+++ b/.github/workflows/users_tests.yml
@@ -25,13 +25,12 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Go to users subdirectory
-      run: cd users
-
-    - name: Run ls for debug
-      run: ls
     - name: Build
-      run: go build -v ./...
+      run: |
+        cd users
+        go build -v ./...
 
     - name: Run tests
-      run: go test -v ./tests/...
+      run: |
+        cd users
+        go test -v ./tests/...
