--- a/.github/workflows/buildable.yml
+++ b/.github/workflows/buildable.yml
@@ -18,8 +18,14 @@ jobs:
         with:
           go-version: '1.22.4'
 
-      - name: Build Docker Compose
-        run: docker-compose build
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+    
+      - name: Build Docker images
+        uses: docker/build-push-action@v2
+        with:
+            context: .
+            push: false
 
       - name: Run Docker Compose
         run: docker-compose up
