--- a/.github/workflows/buildable.yml
+++ b/.github/workflows/buildable.yml
@@ -21,11 +21,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
     
-      - name: Build Docker images
-        uses: docker/build-push-action@v2
-        with:
-            context: .
-            push: false
+      - name: Build Docker Compose
+        run: docker-compose build
 
       - name: Run Docker Compose
         run: docker-compose up
