--- a/.github/workflows/buildable.yml
+++ b/.github/workflows/buildable.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
     
       - name: Build Docker Compose
-        run: docker-compose build
+        run: docker compose build
 
       - name: Run Docker Compose
-        run: docker-compose up
+        run: docker compose up
