--- a/.github/workflows/buildable.yml
+++ b/.github/workflows/buildable.yml
@@ -25,4 +25,7 @@ jobs:
         run: docker compose build
 
       - name: Run Docker Compose
-        run: docker compose up
+        run: docker compose up -d
+
+      - name: Stop Docker Compose
+        run: docker compose down
