--- a/.github/workflows/users_tests.yml
+++ b/.github/workflows/users_tests.yml
@@ -26,10 +26,10 @@ jobs:
 
     - name: Build
       run: |
-        cd users
+        cd users_service
         go build -v ./...
 
     - name: Run tests
       run: |
-        cd users
+        cd users_service
         go test -v ./tests/...
