--- a/.github/workflows/posts_tests.yml
+++ b/.github/workflows/posts_tests.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Users service tests
+name: Posts service tests
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
     branches: ["main"]
 
 jobs:
-  run_users_service_tests:
+  run_posts_service_tests:
     runs-on: ubuntu-latest
 
     env:
