--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,29 +7,54 @@ services:
       - "8080:8080"
     depends_on:
       - users-service
+
   users-service:
     restart: always
     image: users-service
     environment:
-      POSTGRES_HOST: postgres
+      POSTGRES_HOST: users_postgres
       POSTGRES_PORT: 5432
       POSTGRES_USER: usersservice
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: users
     build: ./users_service
     depends_on:
-      - postgres
+      - users_postgres
 
-  postgres:
+  posts-service:
+    restart: always
+    image: posts-service
+    environment:
+      POSTGRES_HOST: posts_postgres
+      POSTGRES_PORT: 5432
+      POSTGRES_USER: postsservice
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: posts
+    build: ./posts_service
+    depends_on:
+      - posts_postgres
+
+  users_postgres:
     image: postgres:latest
     environment:
       POSTGRES_USER: usersservice
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: users
-    ports:
-      - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - users_data:/var/lib/postgresql/data
+
+  posts_postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: postsservice
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: posts
+    volumes:
+      - posts_data:/var/lib/postgresql/data
 
 volumes:
-  postgres_data:
+  users_data:
+    driver: local
+  posts_data:
+    driver: local
+
